--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -23,7 +23,7 @@ $bodytype: (
 ) !default;
 
 $headingtype: (
-  font-family: '"Barlow", sans serif',
+  font-family: '"Barlow", sans-serif',
   regular: 400,
   bold: 700,
   cap-height: 0.75
